# SDF_Demos

./: README.md  dataflow.yaml
.sdf/rust-project/: Cargo.toml
.sdf/rust-project/count-by-location/assign-event-timestamp/: Cargo.toml
.sdf/rust-project/count-by-location/get-location-count/: Cargo.toml
.sdf/rust-project/re-encode/randencode/: Cargo.toml
.sdf/rust-project/re-encode/randencode/.wit/: api.wit
.sdf/rust-project/re-encode/randencode/src/: lib.rs
.sdf/rust-project/send-highAlerts/upgrade-status/: Cargo.toml
.sdf/rust-project/send-highAlerts/upgrade-status/.wit/: api.wit
.sdf/rust-project/send-highAlerts/upgrade-status/src/: lib.rs
.sdf/rust-project/split-severity/map-high-sev/: Cargo.toml
.sdf/rust-project/split-severity/map-high-sev/.wit/: api.wit
.sdf/rust-project/split-severity/map-high-sev/src/: lib.rs
.sdf/rust-project/tabulated-high/assign-event-timestamp-high/: Cargo.toml
.sdf/rust-project/tabulated-high/assign-event-timestamp-high/.wit/: api.wit
.sdf/rust-project/tabulated-high/assign-event-timestamp-high/src/: lib.rs
.sdf/rust-project/tabulated-high/assign-event-timestamp/.wit/: api.wit
.sdf/rust-project/tabulated-high/assign-event-timestamp/src/: lib.rs
.sdf/rust-project/tabulated-high/get-location-count-high/: Cargo.toml
.sdf/rust-project/tabulated-high/get-location-count-high/.wit/: api.wit
.sdf/rust-project/tabulated-high/get-location-count-high/src/: lib.rs
.sdf/rust-project/tabulated-high/get-location-count/.wit/: api.wit
.sdf/rust-project/tabulated-high/get-location-count/src/: lib.rs
.sdf/rust-project/tabulated-high/increment-location-count/: Cargo.toml
.sdf/rust-project/tabulated-high/increment-location-count-high/: Cargo.toml
.sdf/rust-project/tabulated-high/increment-location-count-high/.wit/: api.wit
.sdf/rust-project/tabulated-high/increment-location-count-high/src/: lib.rs
.sdf/rust-project/tabulated-high/increment-location-count/.wit/: api.wit
.sdf/rust-project/tabulated-high/increment-location-count/src/: lib.rs
.sdf/rust-project/tabulated-high/key-by-location/: Cargo.toml
.sdf/rust-project/tabulated-high/key-by-location-high/: Cargo.toml
.sdf/rust-project/tabulated-high/key-by-location-high/.wit/: api.wit
.sdf/rust-project/tabulated-high/key-by-location-high/src/: lib.rs
.sdf/rust-project/tabulated-high/key-by-location/.wit/: api.wit
.sdf/rust-project/tabulated-high/key-by-location/src/: lib.rs
.sdf/rust-project/topics/is-high/: Cargo.toml
.sdf/rust-project/topics/is-high/.wit/: api.wit
.sdf/rust-project/topics/is-high/src/: lib.rs
.sdf/rust-project/topics/is-low/: Cargo.toml
.sdf/rust-project/topics/is-low/.wit/: api.wit
.sdf/rust-project/topics/is-low/src/: lib.rs
.sdf/rust-project/topics/sink-high-severity/: Cargo.toml
.sdf/rust-project/topics/sink-high-severity/.wit/: api.wit
.sdf/rust-project/topics/sink-high-severity/src/: lib.rs
.sdf/rust-project/topics/sink-low-severity/: Cargo.toml
.sdf/rust-project/topics/sink-low-severity/.wit/: api.wit
.sdf/rust-project/topics/sink-low-severity/src/: lib.rs
.sdf/rust-project/topics/sink-status/: Cargo.toml
.sdf/rust-project/topics/sink-status/.wit/: api.wit
.sdf/rust-project/topics/sink-status/src/: lib.rs
.sdf/rust-project/topics/sink-tabulated-high/: Cargo.toml
.sdf/rust-project/topics/sink-tabulated-high/.wit/: api.wit
.sdf/rust-project/topics/sink-tabulated-high/src/: lib.rs
.sdf/rust-project/topics/sink-update-severity/: Cargo.toml
.sdf/rust-project/topics/sink-update-severity/.wit/: api.wit
.sdf/rust-project/topics/sink-update-severity/src/: lib.rs
.sdf/rust-project/topics/sink-upgrade-severity/: Cargo.toml
.sdf/rust-project/topics/sink-upgrade-severity/.wit/: api.wit
.sdf/rust-project/topics/sink-upgrade-severity/src/: lib.rs
.sdf/rust-project/topics/source-cars/: Cargo.toml
.sdf/rust-project/topics/source-cars/.wit/: api.wit
.sdf/rust-project/topics/source-cars/src/: lib.rs
.sdf/rust-project/topics/source-high-severity/: Cargo.toml
.sdf/rust-project/topics/source-high-severity/.wit/: api.wit
.sdf/rust-project/topics/source-high-severity/src/: lib.rs
.sdf/rust-project/topics/source-low-severity/: Cargo.toml
.sdf/rust-project/topics/source-low-severity/.wit/: api.wit
.sdf/rust-project/topics/source-low-severity/src/: lib.rs
.sdf/rust-project/topics/source-status/: Cargo.toml
.sdf/rust-project/topics/source-status/.wit/: api.wit
.sdf/rust-project/topics/source-status/src/: lib.rs
.sdf/rust-project/topics/source-update-severity/: Cargo.toml
.sdf/rust-project/topics/source-update-severity/.wit/: api.wit
.sdf/rust-project/topics/source-update-severity/src/: lib.rs
.sdf/rust-project/topics/source-upgrade-severity/: Cargo.toml
.sdf/rust-project/topics/source-upgrade-severity/.wit/: api.wit
.sdf/rust-project/topics/source-upgrade-severity/src/: lib.rs
helsinki-demo/helsinki-transit/.sdf/rust-project/: .guest_checksum  Cargo.toml
helsinki-demo/helsinki-transit/.sdf/rust-project/easymap/subset-helsinki/: Cargo.toml
helsinki-demo/helsinki-transit/.sdf/rust-project/read-transit/assign-key/: Cargo.toml
helsinki-demo/helsinki-transit/.sdf/rust-project/read-transit/assign-timestamp/: Cargo.toml
helsinki-demo/helsinki-transit/.sdf/rust-project/read-transit/compute-top-vehicle/: Cargo.toml
helsinki-demo/helsinki-transit/.sdf/rust-project/read-transit/parse-event/: Cargo.toml
helsinki-demo/helsinki-transit/.sdf/rust-project/read-transit/update-speed/: Cargo.toml
helsinki-demo/helsinki-transit/.sdf/rust-project/topics/sink-helsinki-subset/: Cargo.toml
helsinki-demo/helsinki-transit/.sdf/rust-project/topics/sink-top-vehicle/: Cargo.toml
helsinki-demo/helsinki-transit/.sdf/rust-project/topics/source-events/: Cargo.toml
helsinki-demo/helsinki-transit/.sdf/rust-project/topics/source-helsinki/: Cargo.toml
helsinki-demo/helsinki-transit/.sdf/rust-project/unstable/: sdf-df-guest  sdf-macros  sdf-row-guest
helsinki-demo/helsinki-transit/.sdf/rust-project/unstable/sdf-df-guest-0.5.0/: Cargo.toml  Cargo.toml.orig
(+147 files in other folders)
