[workspace]
members = [
    "topics/source-low-severity",
    "count-by-location/assign-event-timestamp",
    "count-by-location/key-by-location",
    "count-by-location/increment-location-count",
    "count-by-location/get-location-count",
    "topics/sink-update-severity",
    "topics/source-status",
    "topics/sink-high-severity",
    "topics/is-high",
    "topics/sink-low-severity",
    "topics/is-low",
    "topics/source-cars",
    "re-encode/randencode",
    "topics/sink-status",
    "topics/source-upgrade-severity",
    "send-highAlerts/upgrade-status",
    "topics/sink-high-severity",
    "topics/source-update-severity",
    "split-severity/map-high-sev",
    "topics/sink-upgrade-severity",
    "topics/source-high-severity",
    "tabulated-high/assign-event-timestamp-high",
    "tabulated-high/key-by-location-high",
    "tabulated-high/increment-location-count-high",
    "tabulated-high/get-location-count-high",
    "topics/sink-tabulated-high",
]

resolver = "2"

[workspace.dependencies]
## GENERATED WORKSPACE DEPENDENCIES
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simd-json = "0.13.9"
wit-bindgen = { version = "0.25.0", default-features = false }
sdrg = { version = "0.1.3", package = "sdf-row-guest" }
sdfg = { version = "0.2.2", package = "sdf-df-guest" }
sdf-macros = "0.3.0-alpha.2"
## END OF GENERATED WORKSPACE DEPENDENCIES

[profile.wasm-debug]
inherits = "dev"
overflow-checks = false
strip = true
panic = "abort"

[profile.wasm-release]
inherits = "release"
overflow-checks = false
strip = true
opt-level = 'z'
codegen-units = 1
panic = "abort"

[profile.wasm-optimized]
inherits = "release"
overflow-checks = false
strip = true
opt-level = 3
codegen-units = 1
panic = "abort"