[package]
name = "assign_event_timestamp"
version = "0.0.0"
edition = "2021"
description = ""

[lib]
crate-type = ["cdylib"]


[dependencies]
## GENERATED DEPENDENCIES
serde = { workspace = true }
wit-bindgen = { workspace = true, features = ["macros"]}
sdf-macros = { workspace = true }
## END OF GENERATED DEPENDENCIES