[package]
name = "randencode"
version = "0.0.0"
edition = "2021"
description = ""

[lib]
crate-type = ["cdylib"]


[dependencies]
## GENERATED DEPENDENCIES
serde = { workspace = true }
wit-bindgen = { workspace = true, features = ["macros"]}
sdf-macros = { workspace = true }
rand = "0.8"
## END OF GENERATED DEPENDENCIES