[workspace]
members = [
    "topics/source-helsinki",
    "easymap/subset-helsinki",
    "topics/sink-helsinki-subset",
    "topics/source-events",
    "read-transit/parse-event",
    "read-transit/assign-timestamp",
    "read-transit/assign-key",
    "read-transit/update-speed",
    "read-transit/compute-top-vehicle",
    "topics/sink-top-vehicle",
]

resolver = "2"


[patch.crates-io]
sdfg = { path = "./unstable/sdf-df-guest-0.5.0", package = "sdf-df-guest" }
sdrg = { path = "./unstable/sdf-row-guest-0.5.0", package = "sdf-row-guest" }
sdf-macros = { path = "./unstable/sdf-macros-0.5.0"}


[workspace.dependencies]
## GENERATED WORKSPACE DEPENDENCIES
anyhow = "1.0"
bson = "2.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simd-json = "0.13.9"
wit-bindgen = { version = "0.25.0", default-features = false }
sdrg = { version = "0.5.0", package = "sdf-row-guest" }
sdfg = { version = "0.5.0", package = "sdf-df-guest" }
sdf-macros = "0.5.0"
## END OF GENERATED WORKSPACE DEPENDENCIES

[profile.wasm-debug]
inherits = "dev"
overflow-checks = false
strip = true
panic = "abort"

[profile.wasm-release]
inherits = "release"
overflow-checks = false
strip = true
opt-level = 'z'
codegen-units = 1
panic = "abort"

[profile.wasm-optimized]
inherits = "release"
overflow-checks = false
strip = true
opt-level = 3
codegen-units = 1
panic = "abort"