[package]
name = "subset_helsinki"
version = "0.0.0"
edition = "2021"
description = ""

[lib]
crate-type = ["cdylib"]

[dependencies]
## GENERATED DEPENDENCIES
anyhow = { workspace = true }
serde = { workspace = true }
wit-bindgen = { workspace = true, features = ["macros"]}
sdf-macros = { workspace = true }
## END OF GENERATED DEPENDENCIES