[package]
name = "assign_timestamp"
version = "0.0.0"
edition = "2021"
description = ""

[lib]
crate-type = ["cdylib"]

[dependencies]
## GENERATED DEPENDENCIES
anyhow = { workspace = true }
serde = { workspace = true }
wit-bindgen = { workspace = true, features = ["macros"]}
sdf-macros = { workspace = true }
chrono = "0.4.23"
## END OF GENERATED DEPENDENCIES